2004-01-30  Not Zed  <NotZed@Ximian.com>

	** See bug #53549, partial fix.

	* em-folder-selector.c (emfs_create_name_activate): only emit the
	ok response if the ok button would be active (i.e. entered a valid
	path).

	** See bug #52992.

	* message-list.c (message_list_hide_clear): save the hide state
	after its been cleared, so any popup windows inherit it.
	(message_list_hide_uids): same.

	** See bug #53123.

	* em-folder-tree-model.c (drop_folder): changed to take store and
	dest folder as arg, to handle the case of the parent folder being
	"" properly.
	(em_folder_tree_model_drag_data_received): special case dropping a
	folder, and don't allow dropping to "" for any other types.

2004-01-30  Not Zed  <NotZed@Ximian.com>

	** See bug #53558 (plus other fixes/cleanups)

	* em-format.c (emf_format_secure): default implementation, handle
	output of inner part, but dont output any sign/encrypt info.
	(emf_multipart_signed, emf_multipart_encrypted): replaced with
	implementations from em-format-html.c, which now call
	em_format_format_secure to output guts.
	(emf_class_init): hook-up virtual method format_secure.

	* em-format.[ch]: add a virtual method for outputing secured
	parts.  Moved all validity stuff from em-format-html.[ch] to here.

	* mail-component.c (impl_createControls): set the session
	interactive too.

	* em-format-html-display.c: make smime stuff dependent on
	HAVE_NSS.
	(efhd_multipart_signed, efhd_application_xpkcs7mime): removed, now
	handled by root class.
	(efhd_output_secure): renamed to efhd_format_secure, and use
	EMFormat::format_secure to kick off.
	(efhd_class_init): setup format_secure virtual method.

	* em-format-html.c (efh_multipart_encrypted): We need to handle
	this here so we can properly keep track of the ciphervalidity
	stuff.  Also do it directly using the context, not
	multipartencrypted part.
	(efh_multipart_signed): with unsupported signature format, format
	as multipart/mixed, not as an attachment.